control-plane/manifests/dashboard/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-direct-nginx
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    # External DNS
    external-dns.alpha.kubernetes.io/hostname: dashboard.tineochristopher.com
    external-dns.alpha.kubernetes.io/target: 96.248.109.98

    # Auth with oauth2-proxy
    nginx.ingress.kubernetes.io/auth-url: "http://dashboard-oauth2-proxy.kubernetes-dashboard.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.tineochristopher.com/oauth2/start?rd=$scheme://$http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization,X-Auth-Request-User,X-Auth-Request-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $auth_header $upstream_http_authorization;
      proxy_set_header Authorization $auth_header;
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.tineochristopher.com
      secretName: dashboard-tls
  rules:
    - host: dashboard.tineochristopher.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-kubernetes-dashboard-web
                port:
                  number: 8000
